[package]
name = "pcacsv"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vi/pcacsv"
license = "MIT/Apache-2.0"
description = "Command line tool to analyse data in CSV files using `pca` crate"
categories = ["command-line-utilities"]
keywords = ["csv", "pca", "cli"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
csv = "1.2.2"
gumdrop = "0.8.1"
ndarray = "0.15.6"
number_range = "0.3.2"
pca = "0.1.4"
trimothy = "0.1.8"
